exports[`StackedList Default 1`] = `
<div
  className="container">
  <div
    className="row">
    <div
      className="item">
      <a
        href="/parent">
        Parent
      </a>
    </div>
    <div
      className="item">
      <div
        className="container">
        <div
          className="row">
          <div
            className="item">
            <a
              href="/parent/child1">
              Child 1
            </a>
          </div>
        </div>
        <div
          className="row">
          <div
            className="item">
            <a
              href="/parent/child2">
              Child 2
            </a>
          </div>
        </div>
        <div
          className="row">
          <div
            className="item">
            <a
              href="/parent/child3">
              Child 3
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`StackedList With many levels of descendance 1`] = `
<div
  className="container">
  <div
    className="row">
    <div
      className="item">
      <a
        href="">
        #1
      </a>
    </div>
    <div
      className="item">
      <div
        className="container">
        <div
          className="row">
          <div
            className="item">
            <a
              href="">
              #11
            </a>
          </div>
        </div>
        <div
          className="row">
          <div
            className="item">
            <a
              href="">
              #12
            </a>
          </div>
          <div
            className="item">
            <div
              className="container">
              <div
                className="row">
                <div
                  className="item">
                  <a
                    href="">
                    #121
                  </a>
                </div>
                <div
                  className="item">
                  <div
                    className="container">
                    <div
                      className="row">
                      <div
                        className="item">
                        <a
                          href="">
                          #1211
                        </a>
                      </div>
                    </div>
                    <div
                      className="row">
                      <div
                        className="item">
                        <a
                          href="">
                          #1212
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="row">
                <div
                  className="item">
                  <a
                    href="">
                    #122
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="row">
          <div
            className="item">
            <a
              href="">
              #13
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="row">
    <div
      className="item">
      <a
        href="">
        #2
      </a>
    </div>
    <div
      className="item">
      <div
        className="container">
        <div
          className="row">
          <div
            className="item">
            <a
              href="">
              #21
            </a>
          </div>
        </div>
        <div
          className="row">
          <div
            className="item">
            <a
              href="">
              #21
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
